# Wargaming-Academy-Entrance-Assignment

./: CMakeLists.txt  Makefile  README.md
res/: ConditionsShader.shd  PlayfieldShader.shd
src/: CMakeLists.txt  Game.cpp  Game.h  GameInit.cpp  GameInit.h  GameLoop.cpp
src/Input/: CMakeLists.txt  Input.h
src/Memory/: CMakeLists.txt  DataTypes.h
src/Renderer/: CMakeLists.txt  Debug.h  DrawCalls.h  GLFW.h  IndexBuffer.cpp  IndexBuffer.h  RendererUtil.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h
